# pyassuan

./: .gitignore  .update-copyright.conf  README  README.rst  check.py  pyproject.toml  setup.py
posts/gpg-agent/: pinentry.py
pyassuan/: __init__.py  client.py  common.py  error.py  server.py  test_common.py  test_error.py  test_server.py
scripts/: get_info.py  pinentry.py
src/pyassuan/: __init__.py  client.py  common.py  error.py  server.py
tests/: test_common.py  test_error.py  test_server.py
