[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyassuan"
version = "0.2.0"
description = "Python module and tools for communicating in the Assuan protocol."
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.6"
authors = [{name = "W. Trevor King", email = "wking@tremily.us"}]
maintainers = [{name = "Jesse P. Johnson", email = "jpj6652@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.4",
    # "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development",
]

[project.optional-dependencies]
test = [
    "flake8>=3.8.3,<4",
    "tox>=3.24.0,<4",
    "mypy>=0.910,<1",
    "pylint>=2.9.5,<3",
    "nose2>=0.11.0,<1",
    # "pytest>=6.2.5,<7",
    # "pytest-cov>=2.10.0,<3",
]
doc = [
    "docstr-coverage>=1.2.0,<2",
    "pydocstyle[toml]>=6.1.1,<7",
]
format = [
    "click==8.0.4",
    "black==22.1.0",
    "isort>=5.9.2,<6",
]
build = ["flit>=3,<4"]

[project.urls]
homepage = "http://blog.tremily.us/posts/pyassuan/"
repository = "https://github.com/wking/pyassuan.git"

# [tool.flit.scripts]
# get-info = "bin/get_info.py"
# pypinentry = "bin/pinentry.py"

[tool.pydocstyle]
ignore = [
    "D203",
    "D213",
    "D300"
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
